--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon ./src/index.js"
+    "start": "node src/index.js"
   },
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
     "discord.js": "^14.16.3",
-    "dotenv": "^17.2.3",
-    "nodemon": "^3.1.7"
-  }
+    "dotenv": "^17.2.3"
+  },
+  "type": "module"
 }
